--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.stephen</groupId>
     <artifactId>hello-world</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -19,8 +19,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <!--<docker.image.prefix>registry.cn-shenzhen.aliyuncs.com/helloworld</docker.image.prefix>-->
-        <docker.image.prefix>registry-vpc.cn-shenzhen.aliyuncs.com/airparking</docker.image.prefix>
+        <docker.image.prefix>registry.cn-guangzhou.aliyuncs.com/stark_v</docker.image.prefix>
         <dockerfile.maven.version>1.4.10</dockerfile.maven.version>
     </properties>
 
